--- a/Fase 3/Modulo 1/07 - Membros/public/styles.css
+++ b/Fase 3/Modulo 1/07 - Membros/public/styles.css
@@ -154,7 +154,7 @@ header{
 
 }
 
-.details .item span, .spanservice{
+.details .item span, .spanService, .spanMail{
 
     display: inline-block;
     padding: 8px 16px;
@@ -273,7 +273,7 @@ tbody tr td:first-child span{
 
 }
 
-tbody tr td:last-child a{
+tbody tr td:last-child a, .table-container > a{
 
    background-color: var(--color-rocket);
    color: white;
@@ -282,6 +282,12 @@ tbody tr td:last-child a{
    text-decoration: none;
    text-transform: uppercase;
    font-size: 12px;
+}
+
+.table-container > a{
+    margin-bottom: 16px;
+    margin-left: 10px;
+    display: inline-block;
 }
 
 
