--- a/Fase 3/Modulo 1/07 - Membros/views/members/index.njk
+++ b/Fase 3/Modulo 1/07 - Membros/views/members/index.njk
@@ -1,26 +1,28 @@
 {% extends "layout.njk" %}
 
 {% block head %} 
-    <title>Gym Manager | Instructors</title>
+    <title>Gym Manager | members</title>
 {% endblock%}
 
 {% block content %}
 
     <div class="card table-container">
+        <a href="/members/create">Novo</a>
+
        <table width="100%">
            <thead>
                <tr>
-                   <th>Instructor</th>
-                   <th>Atendimento</th>
+                   <th>member</th>
+                   <th>Email</th>
                    <th>Ação</th>
                </tr>
            </thead>
            <tbody>
-               {% for instructor in instructors %}
+               {% for member in members %}
                 <tr>
-                    <td><span style="background-image: url({{instructor.avatar_url}})"></span> {{instructor.name}}</td>
-                    <td>{{instructor.services}}</td>
-                    <td><a href="/instructors/{{instructor.id}}">Ver</a></td>
+                    <td><span style="background-image: url({{member.avatar_url}})"></span> {{member.name}}</td>
+                    <td><span class="spanMail">{{member.email}}</span></td>
+                    <td><a href="/members/{{member.id}}">Ver</a></td>
                 </tr>
                {% endfor %}
            </tbody>
