--- a/Fase 3/Modulo 1/07 - Membros/Desafio/views/teachers/edit.njk
+++ b/Fase 3/Modulo 1/07 - Membros/Desafio/views/teachers/edit.njk
@@ -8,7 +8,7 @@
 <div class="card">
     <section 
         class="avatar" 
-        style="background: url(https://source.unsplash.com/collection/1603248/900x900) no-repeat center center / cover ">
+        style="background: url({{teachers.avatar_url}}) no-repeat center center / cover ">
     </section>
 
     <form  method="POST" action="/teachers?_method=PUT">
